--- a/css/Style.css
+++ b/css/Style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('root.css');
 @import url('fonts-size-root.css');
 
 @font-face {
@@ -26,7 +27,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-    
+ 
+#wrapper{
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    background-color: var(--black);
+    color: var(--white);
+}
+
 h1{
     font-size: var(--size-h1);
     font-family: 'Roboto-black', Verdana, Geneva, Tahoma, sans-serif; 
@@ -50,5 +59,6 @@ h5{
 p{
     font-size: var(--size-p);
     font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif; 
+    line-height: 1.4;
 
 }
