--- a/css/Style.css
+++ b/css/Style.css
@@ -62,3 +62,15 @@ p{
     line-height: 1.4;
 
 }
+
+::-webkit-scrollbar {
+    width: 16px;
+}
+::-webkit-scrollbar-thumb {
+    background-image: var(--gradient);
+    border-radius: 10px;
+    border: 3px solid var(--black);
+}
+::-webkit-scrollbar-track {
+    background-color: var(--black);
+}
