--- a/css/root.css
+++ b/css/root.css
@@ -20,7 +20,7 @@
     --black: #212026;
     --white: #ffffff;
     --gradient: linear-gradient(303deg, #5fb0db 0%, #71ebce 60%, #86e9a4 100%);
-    --gradient-color: #5fb0db;
+    --gradient-color: #71ebce;
     }
 
 
