--- a/css/Style.css
+++ b/css/Style.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url('root.css');
 @import url('fonts-size-root.css');
 
 @font-face {
@@ -70,7 +69,7 @@ h5{
     font-size: var(--size-h5);
     font-family: 'Roboto-bold', Verdana, Geneva, Tahoma, sans-serif; 
 }
-p{
+p, body{
     font-size: var(--size-p);
     font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif; 
     line-height: 1.4;
@@ -107,6 +106,29 @@ nav{
     gap: 20px;
     font-size: var(--size-h5);
 }
+
+nav :hover{
+color: var(--primary-light-10);
+}
+
+#iconoColor {
+    -webkit-mask: url(/images/color.svg) no-repeat 50% 50%;
+    mask: url(/images/color.svg) no-repeat 50% 50%;
+}
+
+.icono-svg {
+    height: 24px;
+    width: 24px;
+    transform: scale(1.5);
+    background-color: var(--neutral-light-10);
+
+}
+
+.icono-svg:hover {
+    cursor: pointer;
+    background-image: var(--gradient);
+}
+
 #slider{
     background-image: var(--gradient);
     background-color: var(--gradient-color);
