--- a/css/root2.css
+++ b/css/root2.css
@@ -43,6 +43,6 @@
     --neutral-dark-20: #F7F8F8;
     --bg-color: #ffffff;
     --text-color: #212026;
-    --gradient: linear-gradient(303deg, #c5ac3d 0%, #c755e0 60%, #763fc2 100%);
+    --gradient: linear-gradient(303deg, #d4ac51 0%, #c755e0 60%, #763fc2 100%);
     --gradient-color: #c755e0;
     }
