--- a/css/Style.css
+++ b/css/Style.css
@@ -28,6 +28,7 @@
 }
  
 #wrapper{
+    transition: 1s;
     width: 100%;
     height: 100%;
     min-height: 100vh;
@@ -38,12 +39,14 @@
 h1{
     font-size: var(--size-h1);
     font-family: 'Roboto-black', Verdana, Geneva, Tahoma, sans-serif;
+}
+.textoDegradado {
     color: var(--primary-light-00);
 }
     @supports (
         (-webkit-background-clip: text) or (-webkit-text-fill-color: transparent)
       ) {
-        h1 {
+        .textoDegradado {
           background: var(--gradient);
           background-size: contain;
           background-repeat: repeat;
@@ -93,18 +96,20 @@ a{
 }
 
 header{
+    transition: 0.5s;
     background-color: var(--bg-color);
     width: 100%;
-    padding: 20px;
+    padding: 16px 30px;
     position: absolute;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
+    gap: 30px;
 }
 nav{
     display: flex;
     gap: 20px;
-    font-size: var(--size-h5);
+    font-size: var(--size-p);
 }
 
 nav :hover{
@@ -112,8 +117,12 @@ color: var(--primary-light-10);
 }
 
 #selectorColores {
+    background-color: var(--bg-color);
+    position: fixed;
+    top: 10px;
+    right: 20px;
     display: flex;
-    padding: 10px 16px;
+    padding: 8px 16px;
     gap: 20px;
     border: 2px solid var(--primary-dark-20);
     border-radius: 16px;
@@ -147,6 +156,7 @@ color: var(--primary-light-10);
 }
 
 #slider{
+    transition: 1s;
     background-image: var(--gradient);
     background-color: var(--gradient-color);
     min-height: 100vh;
@@ -160,7 +170,6 @@ color: var(--primary-light-10);
 }
 
 .img-portfolio{
-    background-color: var(--bg-color);
     overflow-x: scroll;
     cursor: grab;
 }
