--- a/css/Style.css
+++ b/css/Style.css
@@ -99,16 +99,20 @@ header{
     transition: 0.5s;
     background-color: var(--bg-color);
     width: 100%;
-    padding: 16px 30px;
+    height: 70px;
+    padding: 10px 30px;
     position: absolute;
     display: flex;
     justify-content: start;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
+}
+.black{
+    font-family: 'Roboto-black', Verdana, Geneva, Tahoma, sans-serif;
 }
 nav{
     display: flex;
-    gap: 20px;
+    gap: 30px;
     font-size: var(--size-p);
 }
 
@@ -117,15 +121,16 @@ color: var(--primary-light-10);
 }
 
 #selectorColores {
+    transition: 0.5s;
     background-color: var(--bg-color);
     position: fixed;
-    top: 10px;
+    top: 14px;
     right: 20px;
     display: flex;
     padding: 8px 16px;
     gap: 20px;
     border: 2px solid var(--primary-dark-20);
-    border-radius: 16px;
+    border-radius: 0 26px 0 26px;
 }
 #iconoColor {
     -webkit-mask: url(/images/color.svg) no-repeat 50% 50%;
@@ -143,7 +148,6 @@ color: var(--primary-light-10);
 .icono-svg {
     height: 24px;
     width: 24px;
-    transform: scale(1.5);
     background-color: var(--neutral-light-10);
 }
 
@@ -156,17 +160,17 @@ color: var(--primary-light-10);
 }
 
 #slider{
-    transition: 1s;
     background-image: var(--gradient);
     background-color: var(--gradient-color);
     min-height: 100vh;
     padding: 10px;
-    padding-top: 100px;
+    padding-top: 80px;
  color: var(--bg-color);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
+ overflow: hidden;
 }
 
 .img-portfolio{
@@ -177,4 +181,24 @@ color: var(--primary-light-10);
 .centrado{
     text-align: center;
     margin: 0 auto;
+}
+
+
+
+
+
+@keyframes ampliar-rebote {
+    0% {
+        transform: scale(10%);
+    }
+    70% {
+        transform: scale(150%);
+    }
+    100% {
+        transform: scale(100%);
+    }
+}
+
+.animate-movimiento-rebote {
+    animation: ampliar-rebote 0.6s ease-in-out;
 }
