--- a/css/root.css
+++ b/css/root.css
@@ -19,8 +19,8 @@
     --neutral-dark-20: #292A2F;
     --bg-color: #212026;
     --text-color: #ffffff;
-    --gradient: linear-gradient(303deg, #5fb0db 0%, #71ebce 60%, #86e9a4 100%);
-    --gradient-color: #71ebce;
+    --gradient: linear-gradient(303deg, #5fb0db 0%, #17B598 60%, #86e9a4 100%);
+    --gradient-color: #17B598;
     }
 
 :root.light{
