--- a/css/root2.css
+++ b/css/root2.css
@@ -19,7 +19,7 @@
     --neutral-dark-20: #292A2F;
     --bg-color: #212026;
     --text-color: #ffffff;
-    --gradient: linear-gradient(303deg, #dbc45f 0%, #d571eb 60%, #8b61df 100%);
+    --gradient: linear-gradient(30deg, #FFCC70 0%, #d571eb 60%, #8b61df 100%);
     --gradient-color: #d571eb;
     }
 :root.light {
@@ -43,6 +43,6 @@
     --neutral-dark-20: #F7F8F8;
     --bg-color: #ffffff;
     --text-color: #212026;
-    --gradient: linear-gradient(303deg, #d4ac51 0%, #c755e0 60%, #763fc2 100%);
+    --gradient: linear-gradient(30deg, #FFCC70 0%, #c755e0 60%, #763fc2 100%);
     --gradient-color: #c755e0;
     }
