--- a/css/Style.css
+++ b/css/Style.css
@@ -22,16 +22,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
+body{
+    background-color: var(--bg-color);
+}
 #wrapper{
     width: 100%;
     max-width: 100vw;
     height: 100%;
     min-height: 100vh;
-    background-color: var(--bg-color);
     color: var(--text-color);
 }
 #wrapper section{
-transition: 1s;
+transition: 0.5s ease-out;
 }
 h1{
     font-size: var(--size-h1);
@@ -77,21 +82,23 @@ a{
     color: var(--text-color);
     font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif; 
 }
-
+a:hover{
+    color: var(--primary-light-10);
+    }
 ::-webkit-scrollbar {
     width: 16px;
+}
+::-webkit-scrollbar-track {
+    background-color: var(--bg-color);
 }
 ::-webkit-scrollbar-thumb {
     background-image: var(--gradient);
     border-radius: 10px;
     border: 3px solid var(--bg-color);
 }
-::-webkit-scrollbar-track {
-    background-color: var(--bg-color);
-}
 
 header{
-    transition: 0.5s;
+    transition: 0.5s ease-out;
     background-color: var(--bg-color);
     width: 100%;
     height: 70px;
@@ -111,31 +118,25 @@ nav{
     gap: 30px;
     font-size: var(--size-p);
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
     nav{
         display: none;
     }
     
 }
 
-nav :hover{
-color: var(--primary-light-10);
-}
-
 #selectorColores {
-    transition: 0.5s;
-    background-color: var(--bg-color);
+    transition: 0.5s ease-out;
+    background-color: var(--text-color);
     position: fixed;
     z-index: 20;
     top: 14px;
-    right: 20px;
+    right: 14px;
     display: flex;
     padding: 8px 16px;
     gap: 20px;
-    border: 2px solid var(--primary-dark-20);
-    border-radius: 0 26px 0 26px;
+    border-radius: 20px;
 }
-
 
 #iconoColor {
     -webkit-mask: url(/images/color.svg) no-repeat 50% 50%;
@@ -153,7 +154,7 @@ color: var(--primary-light-10);
 .icono-svg {
     height: 24px;
     width: 24px;
-    background-color: var(--neutral-light-10);
+    background-color: var(--bg-color);
 }
 
 .icono-svg:hover {
@@ -192,6 +193,7 @@ color: var(--primary-light-10);
 
 #slider h1{
     z-index: 8;
+    text-align: center;
 }
 
 .bolaMov1{
@@ -259,23 +261,77 @@ color: var(--primary-light-10);
     z-index: 6;
     animation: rotar 5s infinite;
     transform-origin: -100% -120%;
-
 }
-.img-portfolio{
+
+section {
+    padding: 50px;
+}
+.titular {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+.cuadro {
+    background-image: var(--gradient);
+    background-color: var(--gradient-color);
+    width: 10px;
+    height: var(--size-h2);
+}
+.imgPortfolio{
     overflow-x: scroll;
     cursor: grab;
 }
+.imgPortfolio::-webkit-scrollbar-thumb {
+    background-color: var(--primary-dark-20);
+    background-image: none;
+}
+.imgPortfolio::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-dark-00);
+    background-image: none;
+}
+.doscolumnas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+@media screen and (max-width: 768px) {
+    .doscolumnas {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+    
+}
 
+.flexcentrado {
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.imgAlberto {
+    width: 60%;
+    border-radius: 10px;
+}
 
-.centrado{
-    text-align: center;
-    margin: 0 auto;
+/* .lista:first-child {
+    border-top: 2px solid var(--neutral-dark-00);
+} */
+.listado {
+    padding: 16px 0;
+    border-bottom: 2px solid var(--neutral-dark-00);
 }
 
 
-
-
-
+footer {
+    padding: 20px;
+    text-align: right;
+    color: var(--neutral-light-00);
+}
+footer p {
+    font-size: calc(var(--size-p) * 0.75);
+}
 @keyframes ampliar-rebote {
     0% {
         transform: scale(10%);
@@ -312,4 +368,51 @@ color: var(--primary-light-10);
     60% {
         transform: scale(1.5) translate(-70%, -20%);
     }
+}
+
+@keyframes aparicion {
+	from {
+		opacity: 0;
+		scale: 20%;
+	}
+
+	to {
+		opacity: 1;
+		scale: 100%;
+	}
+}
+img {
+	view-timeline-name: --image;
+	view-timeline-axis: block;
+
+	animation-timeline: --image;
+	animation-name: aparicion;
+
+	animation-range: entry 25% cover 50%;
+	animation-fill-mode: both;
+}
+    
+@keyframes aparicionfilete {
+	from {
+    transform: scaleX(0);
+	}
+	to {
+    transform: scaleX(1);
+	}
+}
+.filete {
+    background-image: var(--gradient);
+    background-color: var(--gradient-color);
+    width: 100%;
+    height: 4px;
+    margin-bottom: 30px;
+
+	view-timeline-name: --filete;
+	view-timeline-axis: block;
+
+	animation-timeline: --filete;
+	animation-name: aparicionfilete;
+
+	animation-range: entry 50% cover 50%;
+	animation-fill-mode: both;
 }
