--- a/css/Style.css
+++ b/css/Style.css
@@ -122,7 +122,6 @@ nav{
     nav{
         display: none;
     }
-    
 }
 
 #selectorColores {
@@ -177,30 +176,30 @@ nav{
     transition: 0.5s ease-out;
     position: absolute;
     top: 17px;
-    right: 10px;
+    left: 24px;
     border-radius: 50%;
     width: 6px;
     height: 6px;
-    transform-origin: -9px;
+    transform-origin: -12px 50%;
 }
 .punto1{
     background-color: #17B598;
-    transform: rotate(-60deg);
+    transform: rotate(-48deg);
     border: 1px solid var(--text-color);
 }
 .punto2{
     background-color: #40a0f0;
-    transform: rotate(-20deg);
+    transform: rotate(-16deg);
     border: 1px solid var(--text-color);
 }
 .punto3{
     background-color: #d571eb;
-    transform: rotate(20deg);
+    transform: rotate(16deg);
     border: 1px solid var(--text-color);
 }
 .punto4{
     background-color: #ed8c1c;
-    transform: rotate(60deg);
+    transform: rotate(48deg);
     border: 1px solid var(--text-color);
 }
 .actual {
@@ -364,6 +363,17 @@ align-items: center;
     padding: 16px 0;
     border-bottom: 2px solid var(--neutral-dark-00);
 }
+#iconoEmail {
+    -webkit-mask: url(/images/Email.svg) no-repeat 50% 50%;
+    mask: url(/images/Email.svg) no-repeat 50% 50%;
+}
+
+
+.marco {
+    border: 5px solid var(--primary-dark-00);
+    height: 100%;
+    padding: 50px;
+}
 
 
 footer {
@@ -409,6 +419,15 @@ footer p {
 @keyframes gradient {
     60% {
         transform: scale(1.5) translate(-70%, -20%);
+    }
+}
+
+@keyframes rotacioninfinita {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
 
