--- a/css/Style.css
+++ b/css/Style.css
@@ -89,7 +89,7 @@ a:hover{
     color: var(--primary-light-10);
     }
 ::-webkit-scrollbar {
-    width: 16px;
+    width: 14px;
 }
 ::-webkit-scrollbar-track {
     background-color: var(--bg-color);
@@ -223,7 +223,7 @@ nav{
  align-items: center;
  overflow: hidden;
 }
-.marcoSlider{
+/* .marcoSlider{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -232,12 +232,24 @@ nav{
     width: 80%;
     max-width: 1000px;
     padding: 5%;
-}
+} */
 
 #slider h1{
-    z-index: 9;
-    text-align: center;
+    z-index: 90;
+    opacity: 80%;
+    color: var(--primary-dark-20);
+    font-size: 16vw;
+    line-height: 100%;
 }
+#slider h1:hover {
+    transition: color 0.2s;
+
+    @media (any-pointer: fine) {
+      &:hover {
+        color: var(--bg-color);
+      }
+    }
+  }
 
 .bolaMov1{
     background-color: var(--highlight-color);
@@ -308,22 +320,41 @@ nav{
 }
 
 section {
-    padding: 50px;
+    margin: 50px;
 }
+
+#destacados {
+    margin:0;
+    overflow: hidden;
+}
+#destacados h1 {
+    color: var(--neutral-dark-00);
+    padding-top: 50px;
+    transform: scale(2);
+}
+
+
 .titular {
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 20px;
     margin-bottom: 20px;
 }
 .cuadro {
-    background-image: var(--gradient);
-    background-color: var(--gradient-color);
-    width: 10px;
-    height: var(--size-h2);
+    background-color: var(--neutral-dark-10);
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
 }
 .textoPortfolio {
     padding: 40px;
+}
+
+#portfolio h3 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: var(--primary-light-00);
 }
 
 .imgPortfolio{
