--- a/css/Style.css
+++ b/css/Style.css
@@ -247,8 +247,8 @@ nav {
   font-size: 16vw;
   line-height: 100%;
 }
-#slider h1:hover {
-}
+/* #slider h1:hover {
+} */
 .soloMovil {
   display: none;
 }
