--- a/css/style.css
+++ b/css/style.css
@@ -142,17 +142,17 @@ nav {
   border-radius: 20px;
 }
 #iconoColor {
-  -webkit-mask: url(/images/color.svg) no-repeat 0px 50%;
-  mask: url(/images/color.svg) no-repeat 0px 50%;
+  -webkit-mask: url(images/color.svg) no-repeat 0px 50%;
+  mask: url(images/color.svg) no-repeat 0px 50%;
   width: 32px;
 }
 #iconoDark {
-  -webkit-mask: url(/images/luna.svg) no-repeat 50% 50%;
-  mask: url(/images/luna.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/luna.svg) no-repeat 50% 50%;
+  mask: url(images/luna.svg) no-repeat 50% 50%;
 }
 #iconoLight {
-  -webkit-mask: url(/images/sol.svg) no-repeat 50% 50%;
-  mask: url(/images/sol.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/sol.svg) no-repeat 50% 50%;
+  mask: url(images/sol.svg) no-repeat 50% 50%;
 }
 .icono-svg {
   z-index: 22;
@@ -269,8 +269,8 @@ nav {
 }
 
 .flechaDown {
-  -webkit-mask: url(/images/flechaDown.svg) no-repeat 50% 50%;
-  mask: url(/images/flechaDown.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/flechaDown.svg) no-repeat 50% 50%;
+  mask: url(images/flechaDown.svg) no-repeat 50% 50%;
   height: 60px;
   width: 80px;
   background-color: var(--primary-dark-20);
@@ -507,28 +507,28 @@ img {
   color: var(--primary-light-10);
 }
 #iconoEmail {
-  -webkit-mask: url(/images/Email.svg) no-repeat 50% 50%;
-  mask: url(/images/Email.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/Email.svg) no-repeat 50% 50%;
+  mask: url(images/Email.svg) no-repeat 50% 50%;
 }
 #iconoLinkedin {
-  -webkit-mask: url(/images/Linkedin.svg) no-repeat 50% 50%;
-  mask: url(/images/Linkedin.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/Linkedin.svg) no-repeat 50% 50%;
+  mask: url(images/Linkedin.svg) no-repeat 50% 50%;
 }
 #iconoGithub {
-  -webkit-mask: url(/images/Github.svg) no-repeat 50% 50%;
-  mask: url(/images/Github.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/Github.svg) no-repeat 50% 50%;
+  mask: url(images/Github.svg) no-repeat 50% 50%;
 }
 #iconoWhatsapp {
-  -webkit-mask: url(/images/Whatsapp.svg) no-repeat 50% 50%;
-  mask: url(/images/Whatsapp.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/Whatsapp.svg) no-repeat 50% 50%;
+  mask: url(images/Whatsapp.svg) no-repeat 50% 50%;
 }
 #iconoCodepen {
-  -webkit-mask: url(/images/codepen.svg) no-repeat 50% 50%;
-  mask: url(/images/codepen.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/codepen.svg) no-repeat 50% 50%;
+  mask: url(images/codepen.svg) no-repeat 50% 50%;
 }
 #iconoUp {
-  -webkit-mask: url(/images/ArrowUp.svg) no-repeat 50% 50%;
-  mask: url(/images/ArrowUp.svg) no-repeat 50% 50%;
+  -webkit-mask: url(images/ArrowUp.svg) no-repeat 50% 50%;
+  mask: url(images/ArrowUp.svg) no-repeat 50% 50%;
 }
 .marco {
   border: 5px solid var(--primary-dark-00);
