--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("fonts-size-root.css");
+@import url("animaciones.css");
 
 @font-face {
   font-family: "Roboto";
@@ -401,15 +402,6 @@ section {
     width: 90%;
     height: 4px;
     margin-bottom: 50px;
-  
-    view-timeline-name: --filete;
-    view-timeline-axis: block;
-  
-    animation-timeline: --filete;
-    animation-name: aparicionfilete;
-  
-    animation-range: entry 50% cover 50%;
-    animation-fill-mode: both;
   }
 .cuadro {
   background-color: var(--neutral-dark-10);
@@ -470,16 +462,6 @@ section {
   margin-bottom: 20px;
   border-radius: 10px;
 }
-img {
-    view-timeline-name: --image;
-    view-timeline-axis: block;
-  
-    animation-timeline: --image;
-    animation-name: aparicion;
-  
-    animation-range: entry 25% cover 50%;
-    animation-fill-mode: both;
-  }
 .destacado {
   color: var(--primary-light-00);
 }
@@ -572,103 +554,3 @@ footer p {
 footer a:hover .iconoscontacto {
   background-image: var(--gradient);
 }
-
-@keyframes aparecer {
-  30% {
-    transform: scale(80%);
-    opacity: 0%;
-  }
-  100% {
-    transform: scale(100%);
-    opacity: 100%;
-  }
-}
-.animate-fade {
-  animation: aparecer 1.6s ease-in-out;
-}
-
-@keyframes desplazartexto {
-  0% {
-    transform: translate(100vw, 0);
-  }
-  100% {
-    transform: translate(-100%, 0);
-  }
-}
-
-@keyframes ampliar-rebote {
-  0% {
-    transform: scale(10%);
-  }
-  70% {
-    transform: scale(150%);
-  }
-  100% {
-    transform: scale(100%);
-  }
-}
-
-.animate-movimiento-rebote {
-  animation: ampliar-rebote 0.6s ease-in-out;
-}
-
-@keyframes rotar {
-  0% {
-    transform: rotate(0deg);
-    opacity: 0.5;
-  }
-  50% {
-    transform: rotate(50deg) scale(0.5);
-    opacity: 0.9;
-  }
-  100% {
-    transform: rotate(0deg);
-    opacity: 0.5;
-  }
-}
-
-@keyframes gradient {
-  60% {
-    transform: scale(1.5) translate(-70%, -20%);
-  }
-}
-
-@keyframes rotacioninfinita {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes aparicion {
-  from {
-    opacity: 0;
-    scale: 20%;
-  }
-
-  to {
-    opacity: 1;
-    scale: 100%;
-  }
-}
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes aparicionfilete {
-  from {
-    transform: scaleX(0);
-  }
-  to {
-    transform: scaleX(1);
-  }
-}
-
